--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,19 @@
+@ARTICLE{Klypin2016,
+   author = {{Klypin}, A. and {Yepes}, G. and {Gottl{\"o}ber}, S. and {Prada}, F. and 
+	{He{\ss}}, S.},
+    title = "{MultiDark simulations: the story of dark matter halo concentrations and density profiles}",
+  journal = {\mnras},
+ keywords = {methods: numerical, galaxies: haloes, dark matter},
+     year = 2016,
+    month = apr,
+   volume = 457,
+    pages = {4340-4359},
+      doi = {10.1093/mnras/stw248},
+   adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.457.4340K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 @ARTICLE{emcee,
    author = {{Foreman-Mackey}, D. and {Hogg}, D.~W. and {Lang}, D. and {Goodman}, J.
