--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -62,7 +62,7 @@
 %=========================================================================
 %		FRONT MATTER
 %=========================================================================
-\title{A less biased dark matter halo concentration using the integrated mass profile} 
+\title{A less biased dark matter halo concentration estimate using the integrated mass profile} 
 \author{
   C. N. Poveda-Ruiz \thanks{cn.poveda542@uniandes.edu.co}$^{1}$
   J. E. Forero-Romero \thanks{je.forero@uniandes.edu.co}$^{1}$
@@ -725,7 +725,7 @@ explore the full potential of this new method.
  ``Estrategia de  sostenibilidad 2014-2015, Universidad de
  Antioquia''.    
 
-\bibliographystyle{mn2e}
+\bibliographystyle{apj}
 \bibliography{references}
 
 \end{document}
