--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -62,7 +62,7 @@
 %=========================================================================
 %		FRONT MATTER
 %=========================================================================
-\title{A less biased dark matter halo concentration estimate using the integrated mass profile} 
+\title{A new method to estimate dark matter halo concentrations}
 \author{
   C. N. Poveda-Ruiz \thanks{cn.poveda542@uniandes.edu.co}$^{1}$
   J. E. Forero-Romero \thanks{je.forero@uniandes.edu.co}$^{1}$
