--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -84,30 +84,20 @@ dark matter halos using the integrated mass profile.
 The method uses the full particle information without any binning,
 making it reliable in cases when low numerical resolution becomes a
 limitation for other methods.   
-We test the performance of this method by estimating halo
-concentration both on mock and N-body halos. 
-We compare these results against two other methods:
+We compare the new algorithm against two other methods:
 maximum radial velocity measurements and radial particle binning.
-Tests on the mock halos show that the accuracy of the new method to
-recover known input concentrations varies with halo resolution,
-outperforming the other two methods. 
-We design another simple test that can be used on any
-data-set to estimate and correct the biases when estimating the
-concentration at low particle numbers. 
-That test shows that the new method is robust with respect to changes
-in halo particle number. 
-However, the velocity method over-predicts concentration values by a
-factor of $25\%$ values for low particle numbers.
-Finally, we also measure the mass-concentration relationship on N-body
-data. 
+Tests on mock and N-body halos show that the accuracy of the new method to
+measure concentrations varies with halo resolution, outperforming the
+other two methods.  
+We also esteimate the mass-concentration relationship on N-body data. 
 We find that in the probed mass range ($10^{10}\hMsun < M_{h} <
 10^{14}\hMsun$) the three methods give consistent results within the
 statistical uncertainties.   
 There is a small deviation at low masses, $M<10^{12}\hMsun$, where
 the new method yields lower median concentration values by $25\%$
-compared to the velocity methods; accounting for the bias in the
-velocity method brings the results into agreement.  
-From these results we believe that the new method is a promising tool
+compared to the velocity method; the difference is explained by the bias 
+that the velocity method introduces.
+From these results we believe that this new method is a promising tool
 to probe the internal structure of dark matter halos.
 \end{abstract}
 
@@ -726,7 +716,73 @@ explore the full potential of this new method.
  Antioquia''.    
 
 \bibliographystyle{apj}
-\bibliography{references}
+%\bibliography{references}
+\begin{thebibliography}{12}
+\expandafter\ifx\csname natexlab\endcsname\relax\def\natexlab#1{#1}\fi
+
+\bibitem[{{Duffy} {et~al.}(2008){Duffy}, {Schaye}, {Kay}, \& {Dalla
+  Vecchia}}]{Duffy2008}
+{Duffy}, A.~R., {Schaye}, J., {Kay}, S.~T., \& {Dalla Vecchia}, C. 2008,
+  \mnras, 390, L64
+
+\bibitem[{{Foreman-Mackey} {et~al.}(2013){Foreman-Mackey}, {Hogg}, {Lang}, \&
+  {Goodman}}]{emcee}
+{Foreman-Mackey}, D., {Hogg}, D.~W., {Lang}, D., \& {Goodman}, J. 2013, \pasp,
+  125, 306
+
+\bibitem[{{Klypin} {et~al.}(2016){Klypin}, {Yepes}, {Gottl{\"o}ber}, {Prada},
+  \& {He{\ss}}}]{Klypin2016}
+{Klypin}, A., {Yepes}, G., {Gottl{\"o}ber}, S., {Prada}, F., \& {He{\ss}}, S.
+  2016, \mnras, 457, 4340
+
+\bibitem[{{Ludlow} {et~al.}(2014){Ludlow}, {Navarro}, {Angulo},
+  {Boylan-Kolchin}, {Springel}, {Frenk}, \& {White}}]{Ludlow2014}
+{Ludlow}, A.~D., {Navarro}, J.~F., {Angulo}, R.~E., {Boylan-Kolchin}, M.,
+  {Springel}, V., {Frenk}, C., \& {White}, S.~D.~M. 2014, \mnras, 441, 378
+
+\bibitem[{{Macci{\`o}} {et~al.}(2008){Macci{\`o}}, {Dutton}, \& {van den
+  Bosch}}]{Maccio2008}
+{Macci{\`o}}, A.~V., {Dutton}, A.~A., \& {van den Bosch}, F.~C. 2008, \mnras,
+  391, 1940
+
+\bibitem[{{More} {et~al.}(2011){More}, {Kravtsov}, {Dalal}, \&
+  {Gottl{\"o}ber}}]{More2011}
+{More}, S., {Kravtsov}, A.~V., {Dalal}, N., \& {Gottl{\"o}ber}, S. 2011, \apjs,
+  195, 4
+
+\bibitem[{{Mu{\~n}oz-Cuartas} {et~al.}(2011){Mu{\~n}oz-Cuartas}, {Macci{\`o}},
+  {Gottl{\"o}ber}, \& {Dutton}}]{Munoz2011}
+{Mu{\~n}oz-Cuartas}, J.~C., {Macci{\`o}}, A.~V., {Gottl{\"o}ber}, S., \&
+  {Dutton}, A.~A. 2011, \mnras, 411, 584
+
+\bibitem[{{Navarro} {et~al.}(1997){Navarro}, {Frenk}, \& {White}}]{NFW}
+{Navarro}, J.~F., {Frenk}, C.~S., \& {White}, S.~D.~M. 1997, \apj, 490, 493
+
+\bibitem[{{Navarro} {et~al.}(2010){Navarro}, {Ludlow}, {Springel}, {Wang},
+  {Vogelsberger}, {White}, {Jenkins}, {Frenk}, \& {Helmi}}]{Navarro2010}
+{Navarro}, J.~F., {Ludlow}, A., {Springel}, V., {Wang}, J., {Vogelsberger}, M.,
+  {White}, S.~D.~M., {Jenkins}, A., {Frenk}, C.~S., \& {Helmi}, A. 2010,
+  \mnras, 402, 21
+
+\bibitem[{{Neto} {et~al.}(2007){Neto}, {Gao}, {Bett}, {Cole}, {Navarro},
+  {Frenk}, {White}, {Springel}, \& {Jenkins}}]{Neto2007}
+{Neto}, A.~F., {Gao}, L., {Bett}, P., {Cole}, S., {Navarro}, J.~F., {Frenk},
+  C.~S., {White}, S.~D.~M., {Springel}, V., \& {Jenkins}, A. 2007, \mnras, 381,
+  1450
+
+\bibitem[{{Prada} {et~al.}(2012){Prada}, {Klypin}, {Cuesta}, {Betancort-Rijo},
+  \& {Primack}}]{Prada2012}
+{Prada}, F., {Klypin}, A.~A., {Cuesta}, A.~J., {Betancort-Rijo}, J.~E., \&
+  {Primack}, J. 2012, \mnras, 423, 3018
+
+\bibitem[{{Riebe} {et~al.}(2013){Riebe}, {Partl}, {Enke}, {Forero-Romero},
+  {Gottl{\"o}ber}, {Klypin}, {Lemson}, {Prada}, {Primack}, {Steinmetz}, \&
+  {Turchaninov}}]{2013AN....334..691R}
+{Riebe}, K., {Partl}, A.~M., {Enke}, H., {Forero-Romero}, J., {Gottl{\"o}ber},
+  S., {Klypin}, A., {Lemson}, G., {Prada}, F., {Primack}, J.~R., {Steinmetz},
+  M., \& {Turchaninov}, V. 2013, Astronomische Nachrichten, 334, 691
+
+\end{thebibliography}
 
 \end{document}
 
