--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -62,7 +62,7 @@
 %=========================================================================
 %		FRONT MATTER
 %=========================================================================
-\title{Avoiding biased estimates of dark matter halo concentrations}
+\title{Finding and avoiding biases in dark matter halo concentrations estimates}
 \author{
   C. N. Poveda-Ruiz \thanks{cn.poveda542@uniandes.edu.co}$^{1}$
   J. E. Forero-Romero \thanks{je.forero@uniandes.edu.co}$^{1}$
@@ -306,7 +306,8 @@ Simulation Suite.
 
 \begin{figure*}
 \begin{center}
-  \includegraphics[width=0.80\textwidth]{avg_foff_bolshoi.pdf}
+  \includegraphics[width=0.48\textwidth]{avg_foff_bolshoi.pdf}
+  \includegraphics[width=0.48\textwidth]{avg_foff_vialactea.pdf}
 \end{center}
 \vspace{-0.5cm}
 \caption{Average value of the fractional offset ($f_{\rm
